stable/nginx-ingress/nginx-sample/nginx-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx-svc
  namespace: b2b-compass
  labels:
    app: nginx
spec:
  type: NodePort
  ports:
  - port: 80
  selector:
    app: nginx
