stable/nginx-ingress/nginx-sample/nginx-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: b2b-compass-ingress-rule
  namespace: b2b-compass
spec:
  tls:
  - hosts:
      - b2b-compass.aws-0070.cloudfirst.digital
    secretName: b2b-compass-cert
  rules:
  - host: b2b-compass.aws-0070.cloudfirst.digital
    http:
      paths:
        - backend:
            serviceName: my-nginx-svc
            servicePort: 80
          path: /
